--- a/header.css
+++ b/header.css
@@ -5,10 +5,12 @@ header {
 h1 {
   color: #fff;
   font-size: 40px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 a {
   color: #fff;
   text-decoration: none;
   font-size: 21px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
