--- a/header.css
+++ b/header.css
@@ -1,19 +1,24 @@
 header {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
   background-color: #e24647;
+  color: #fff;
+  overflow: hidden;
+  margin: 0 115px;
+  padding: 55px 60px 95px;
 }
 
 h1 {
-  color: #fff;
   font-size: 40px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, 'Roboto', sans-serif;
+  float: left;
+}
+
+nav {
+  font-size: 21px;
+  font-family: 'Segoe UI', 'Roboto', sans-serif;
+  float: right;
 }
 
 a {
-  color: #fff;
+  color: inherit;
   text-decoration: none;
-  font-size: 21px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
