Aula 003 - Desafio avançado
Centralizar o header verticalmente

--- a/header.css
+++ b/header.css
@@ -1,4 +1,7 @@
 header {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
   background-color: #e24647;
   color: #fff;
   overflow: hidden;
