--- a/css/button-store.css
+++ b/css/button-store.css
@@ -1,5 +1,6 @@
 .button-store {
   display: inline-block;
+  box-sizing: border-box;
   background-color: #252c41;
   color: #fff;
   font-size: 20px;
@@ -9,4 +10,12 @@
   height: 60px;
   line-height: 60px;
   text-align: center;
+  border: none;
+}
+
+.button-store.-secondary {
+  background-color: transparent;
+  border: 2px solid #fff;
+  width: 218px;
+  line-height: 56px;
 }
