Prettier code formmating

--- a/css/product-store.css
+++ b/css/product-store.css
@@ -1,5 +1,5 @@
 .product-store {
-  font-family: 'Roboto', Arial, sans-serif;
+  font-family: "Roboto", Arial, sans-serif;
   color: #fff;
   font-size: 20px;
 }
