--- a/css/button-store.css
+++ b/css/button-store.css
@@ -4,7 +4,7 @@
   background-color: #252c41;
   color: #fff;
   font-size: 20px;
-  font-family: Arial, 'Roboto', sans-serif;
+  font-family: Arial, "Roboto", sans-serif;
   text-decoration: none;
   width: 200px;
   height: 60px;
