--- a/css/container-store.css
+++ b/css/container-store.css
@@ -5,5 +5,5 @@
   transform: translateX(-50%) translateY(-50%);
   background-color: #e24647;
   padding: 55px 60px 95px;
-  width: 80%;
+  width: 1370px;
 }
